Favicon, button fixes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="dist//css//main.css" />
+    <link rel="icon" type="image/png" href="img/favicon.ico"  />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+    <link rel="stylesheet" href="dist/css/main.css" />
     <title>weather-weekly</title>
   </head>
   <body>
@@ -28,45 +30,3 @@
     <script src="main.js"></script>
   </body>
 </html>
-
-<!-- <div class="results-card">
-    <div class="card-head">
-      <h2 id="city-name">London</h2>
-      <h3 id="desc">Slight Overcast</h3>
-      <p>Monday, 3 August 2020</p>
-    </div>
-    <div class="cur-weather">
-      <h1 id="current-temp">72°</h1>
-      <div class="icon">
-        <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="" />
-      </div>
-      <div class="cur-details">
-        <p>Hi: <span id="day-hi">81°</span></p>
-        <p>Low:  <span id="day-low">73°</span></p>
-        <p>Humidity: 66%</p>
-        <p>Wind Speed: 11.17 meters / sec</p>
-      </div>
-    </div>
-    <div class="forecast">
-      <div class="icon">
-        <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="" />
-        <p>81°</p>
-      </div>
-      <div class="icon">
-        <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="" />
-        <p>81°</p>
-      </div>
-      <div class="icon">
-        <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="" />
-        <p>81°</p>
-      </div>
-      <div class="icon">
-        <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="" />
-        <p>81°</p>
-      </div>
-      <div class="icon">
-        <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="" />
-        <p>81°</p>
-      </div>
-    </div>
-  </div> -->
